<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvAppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:id="@+id/dividerHeader"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvAppTitle"/>

    <TextView
        android:id="@+id/tvSectionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_section"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/dividerHeader"
        app:layout_constraintStart_toStartOf="parent"/>

    <TableLayout
        android:id="@+id/layoutCheckboxes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvSectionLabel">

        <TableRow
            android:layout_weight="1"
            android:layout_width="0dp">
            <CheckBox
                android:id="@+id/cbHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/black"
                android:checked="true"
                android:text="@string/briefing"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/cbPolitics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/policy"
                android:checked="true"
                android:textColor="@color/black"
                android:buttonTint="@color/black"
                android:textSize="16sp"/>
        </TableRow>
        <TableRow
            android:layout_weight="1"
            android:layout_width="0dp">
            <CheckBox
                android:id="@+id/cbEconomy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/economy"
                android:checked="true"
                android:textColor="@color/black"
                android:buttonTint="@color/black"
                android:textSize="16sp"/>

            <CheckBox
                android:id="@+id/cbSociety"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/society"
                android:checked="true"
                android:textColor="@color/black"
                android:buttonTint="@color/black"
                android:textSize="16sp"/>

        </TableRow>
        <TableRow>
            <CheckBox
                android:id="@+id/cbWorld"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/world"
                android:checked="true"
                android:textColor="@color/black"
                android:buttonTint="@color/black"
                android:textSize="16sp"/>

            <CheckBox
                android:id="@+id/cbClimate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/black"
                android:checked="true"
                android:text="@string/climate"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </TableRow>
        <TableRow>
            <CheckBox
                android:id="@+id/cbCulture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/culture"
                android:checked="true"
                android:textColor="@color/black"
                android:buttonTint="@color/black"
                android:textSize="16sp"/>

            <CheckBox
                android:id="@+id/cbTech"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/black"
                android:checked="true"
                android:text="@string/tech"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </TableRow>
        <TableRow>
            <CheckBox
                android:id="@+id/cbPeople"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/people"
                android:checked="true"
                android:textColor="@color/black"
                android:buttonTint="@color/black"
                android:textSize="16sp"/>

            <CheckBox
                android:id="@+id/cbUnderstanding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/black"
                android:checked="true"
                android:text="@string/understanding"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </TableRow>



        <TextView
            android:id="@+id/tvServerSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_server"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/tvStatus"
            />
        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:gravity="center"
            android:text="@string/sync_text"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/layoutCheckboxes"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tvServerSetting">
            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/get_serverid"
                android:background="@drawable/border_button"
                android:id="@+id/btnGetServerID"/>
            <EditText
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/serverID"
                android:textSize="12sp"
                android:layout_gravity="bottom"
                android:text="@string/serverid"
                android:maxLines="1"
                />
            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/set_serverid"
                android:background="@drawable/border_button"
                android:id="@+id/btnSetServerID"/>
        </LinearLayout>

    </TableLayout>

    <Button
        android:id="@+id/btnDownload"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:text="@string/sync"
        android:textColor="@color/black"
        android:background="@drawable/border_button"
        android:textSize="16sp"
        android:layout_margin="12dp"
        app:layout_constraintBottom_toTopOf="@id/btnViewNews"/>


    <Button
        android:id="@+id/btnViewNews"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:text="@string/news_viewer"
        android:textColor="@color/black"
        android:background="@drawable/border_button"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/tvFooter"/>

    <TextView
        android:id="@+id/tvFooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/footer"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>